--- a/openvpnserverlog.page
+++ b/openvpnserverlog.page
@@ -10,28 +10,34 @@ Title="Logs"
 
 <dl>
 <br>
-	<dt><textarea class="tooltip" title="OpenVPN log" wrap="hard" readonly="yes" style="width: 800px; height: 200px;color: green;font-size: 8pt"><?php echo $openvpn_log; ?></textarea></dt>
+	<dt><textarea class="tooltip" title="OpenVPN log" wrap="hard" readonly="yes" style="width: 800px; height: 150px;color: green;font-size: 8pt"><?php echo $openvpn_log; ?></textarea></dt>
 </br>
 </dl>
 
 <dl>
 <br>
-	<dt><textarea class="tooltip" title="Information from 'ip route show'  is displayed here.." wrap="hard" readonly="yes" style="width: 800px; height: 130px;color: green;font-size: 8pt"><?php echo $check_netstat; ?></textarea></dt>
+	<dt><textarea class="tooltip" title="Information from 'ip route show'  is displayed here.." wrap="hard" readonly="yes" style="width: 800px; height: 120px;color: green;font-size: 8pt"><?php echo $check_netstat; ?></textarea></dt>
 </br>
 </dl>
 
 <dl>
 <br>
-	<dt><textarea class="tooltip" title="OpenVPN status" wrap="hard" readonly="yes" style="width: 800px; height: 160px;color: green;font-size: 8pt"><?php echo $openvpnststus_log; ?></textarea></dt>
+	<dt><textarea class="tooltip" title="OpenVPN status" wrap="hard" readonly="yes" style="width: 800px; height: 120px;color: green;font-size: 8pt"><?php echo $openvpnststus_log; ?></textarea></dt>
 </br>
 </dl>		
 
 <dl>
+<br>
+	 <dt><textarea class="tooltip" title="OpenVPN server cert logs" wrap="hard" readonly="yes" style="width: 800px; height: 80px;color: green;font-size: 8pt"><?php echo $openvpnserver_certlog; ?></textarea></dt>
+</br>
+</dl>
+
+<dl>
 	<br>
-		<dt><textarea class="tooltip" title="Iptables NAT postrouting" wrap="hard" readonly="yes" style="width: 800px; height: 25px;color: red;font-size: 8pt"><?php echo $CHECK_IPTABELS_NAT; ?></textarea></dt>
+		<dt><textarea class="tooltip" title="Iptables NAT postrouting" wrap="hard" readonly="yes" style="width: 800px; height: 27px;color: red;font-size: 8pt"><?php echo $CHECK_IPTABELS_NAT; ?></textarea></dt>
 	</br>
 </dl>
 
 </table>
 </div>
-  
+
