--- a/openvpnserver.page
+++ b/openvpnserver.page
@@ -1,6 +1,6 @@
 Menu="NetworkServices"
 Icon="openvpnserver.png"
-Version="2018.03.01"
+Version="2018.03.03b"
 Author="Peter_sm"
 Type="xmenu"
 Title="OpenVPN Server TUN mode"
@@ -337,9 +337,9 @@ if (file_exists("$SERVERCONFIGPATH/openvpnservercert.out"))
 			<left><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=TXFVJQVYZRBBU&lc=SE&item_name=Support my work on the 2 openvpn plugins and my support!&currency_code=EUR' target='_blank'><img src='https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif'></a></left>
 		<br>
 			<left><br><a href='https://forums.lime-technology.com/topic/33783-openvpn-server-client-for-unraid-62-61-are-still-supported/' target='_blank'>Plugin Support Thread</a></left>
-			
 			<left><br><a href='https://community.openvpn.net/openvpn/wiki/Openvpn24ManPage' target='_blank'>Openvpn24ManPage</a></left>			
 			<left><br><a href='https://forums.openvpn.net/' target='_blank'>OpenVPN Support Forum</a></left>
+			 <left><br><a href='https://github.com/OpenVPN/openvpn/blob/release/2.4/Changes.rst' target='_blank'>Overview of changes in OpenVPN 2.4</a></left>
 			<left><br><a href='https://github.com/OpenVPN/easy-rsa/' target='_blank'>EASYRSA on github</a></left>
         </table></left>
 </div>
