--- a/openvpnserver.page
+++ b/openvpnserver.page
@@ -1,6 +1,6 @@
 Menu="NetworkServices"
 Icon="openvpnserver.png"
-Version="2018.04.10"
+Version="2018.04.10a"
 Author="Peter_sm"
 Type="xmenu"
 Title="OpenVPN Server TUN mode"
