--- a/openvpnserver.page
+++ b/openvpnserver.page
@@ -1,6 +1,6 @@
 Menu="NetworkServices"
 Icon="openvpnserver.png"
-Version="2019.11.30a"
+Version="2020.04.27"
 Author="Peter_sm"
 Type="xmenu"
 Title="OpenVPN Server TUN mode"
