###2023.07.24.04-tap - Install stable easy rsa 3.1.0 by default - Add Option for IPV6 networking

--- a/openvpnserversettings.page
+++ b/openvpnserversettings.page
@@ -146,7 +146,9 @@ $CHECKFOLDERVPN = trim($CHECKFOLDERVPNTMP);
       <dt>Tunnel Protocol</dt>
       <dd><select name="PROTOCOL" id="PROTOCOL" size="1">
       <?=mk_option($openvpnserver_cfg['PROTOCOL'], "udp", "UDP");?>
+      <?=mk_option($openvpnserver_cfg['PROTOCOL'], "udp6", "UDP6");?>
       <?=mk_option($openvpnserver_cfg['PROTOCOL'], "tcp", "TCP");?>
+      <?=mk_option($openvpnserver_cfg['PROTOCOL'], "tcp6", "TCP6");?>
       </select>
 	   </dd>
 	</dl>
